# dataquality

./: pyproject.toml  schema_crm.py
.github/workflows/: CI.yml
app/: etl.py  funcao.py
docs/: index.md
tests/: test_funcao_ola_turma.py
